--- a/KrpanoOnlineViewer/appsettings.json
+++ b/KrpanoOnlineViewer/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "KrpanoExe": "C:\\Users\\autod\\Documents\\Apps\\krpano-1.23.1\\krpanotools.exe"
+  "KrpanoExe": "C:\\Users\\fshake\\Apps\\krpano-1.23.1\\krpanotools.exe"
 }
