添加访问密码功能；更新配置文件和前端界面

--- a/KrpanoOnlineViewer/appsettings.Development.json
+++ b/KrpanoOnlineViewer/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "AccessPassword":"123456",
+  "KrpanoExe": "C:\\Users\\autod\\Documents\\Apps\\krpano-1.23.1\\krpanotools.exe",
+  //  "KrpanoExe": "C:\\Users\\fshake\\Apps\\krpano-1.23.1\\krpanotools.exe"
 }
