--- a/KrpanoOnlineViewer/appsettings.json
+++ b/KrpanoOnlineViewer/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "KrpanoExe": "C:\\Users\\fshake\\Apps\\krpano-1.23.1\\krpanotools.exe"
+  "AccessPassword":"",
+  "KrpanoExe": ""
 }
