优化前端界面；添加全景图名称修改和删除功能

--- a/KrpanoOnlineViewer/KrpanoOnlineViewer.csproj
+++ b/KrpanoOnlineViewer/KrpanoOnlineViewer.csproj
@@ -21,6 +21,12 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Content Remove="obj\**" />
+        <Content Update="wwwroot\main.css">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+        <Content Update="wwwroot\main.js">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
