--- a/KrpanoOnlineViewer/KrpanoOnlineViewer.csproj
+++ b/KrpanoOnlineViewer/KrpanoOnlineViewer.csproj
@@ -6,12 +6,18 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <PublishAot>true</PublishAot>
         <PublishTrimmed>true</PublishTrimmed>
+        <IsAotCompatible>true</IsAotCompatible>
         <OutputPath>C:\CodeTemp\$(SolutionName)\bin\$(Configuration)\$(MSBuildProjectName)</OutputPath>
         <BaseIntermediateOutputPath>C:\CodeTemp\$(SolutionName)\obj\$(Configuration)\$(MSBuildProjectName)</BaseIntermediateOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.22"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="10.0.0" />
+        <PackageReference Include="Serilog" Version="4.3.0" />
+        <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+        <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
         <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
@@ -39,6 +45,12 @@
 
     <ItemGroup>
       <None Remove="obj\**" />
+      <None Update="DeleteWindowsService.bat">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="CreateWindowsService.bat">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
