--- a/KrpanoOnlineViewer/Properties/launchSettings.json
+++ b/KrpanoOnlineViewer/Properties/launchSettings.json
@@ -20,16 +20,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      //"launchUrl": "swagger",
-      "launchUrl": "",
-      "applicationUrl": "https://localhost:7192;http://localhost:5136",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+//    "https": {
+//      "commandName": "Project",
+//      "dotnetRunMessages": true,
+//      "launchBrowser": true,
+//      //"launchUrl": "swagger",
+//      "launchUrl": "",
+//      "applicationUrl": "https://localhost:7192;http://localhost:5136",
+//      "environmentVariables": {
+//        "ASPNETCORE_ENVIRONMENT": "Development"
+//      }
     },
     "IIS Express": {
       "commandName": "IISExpress",
